--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <body>
         <div id="sort">
         </div>
+        <div id="allsort">
+        </div>
         <div id="loading">
             <img id="loading-image" src="loading.gif" alt="Loading..." />
         </div><div id="number1 " class="gs_kupon"><h2>Скидка 15% на все цветы. Не применяется на покупку тортов и десертов</h2>
