--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+        <html lang="ru">
+        <head>
         <link rel="stylesheet" href="main.css" />
         <meta charset="utf-8">
         <head>
@@ -8,6 +10,8 @@
         <div id="date">12 Декабря 2023
         </div>
         <div id="sort">
+        </div>
+        <div id="allsort">
         </div>
         <div id="loading">
             <img id="loading-image" src="loading.gif" alt="Loading..." />
@@ -10028,4 +10032,4 @@
                 <div class="gs_type">Тип скидки: скидка на заказ</div>
                 <div class="gs_code">Промокод: </div>
                 <div class="gs_link"><a href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/360989?erid=2SDnjeU9pnc" >Получить скидку</a></div>
-            </div><script src="main.js"></script></body>
+            </div><script src="main.js"></script></body></html>
