--- a/poisk_tovarov/index.html
+++ b/poisk_tovarov/index.html
@@ -1,1 +1,48 @@
-i
+<!doctype html>
+<html>
+<head>
+    <!-- jquery from google and mobile jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+    <!-- end of jquery from google and mobile jquery -->
+</head>
+<body>
+  <input type="checkbox" name="notid" id="notid checked">Поиск без аксессуаров</input>
+  <input type="checkbox" name="aliexpress" id="aliexpress" checked>Поиск без Aliexpressa</input>
+  <input type="checkbox" name="nobooks" id="nobooks" checked>Поиск без книг</input>
+
+<div id="categs">
+        <select id="Select">
+            <value>товары</value>
+            <value>продукты</value>
+            <value>услуги</value>
+            <value></value>
+        </select>
+        <select id="Select2">
+            <value>товары</value>
+            <value>продукты</value>
+            <value>услуги</value>
+            <value></value>
+        </select>
+
+</div>
+<div>
+    <input id="input" type="text" onchange="moreload()"/>
+</div>
+<button class="startbutton" onclick="searchXML()">нажмите для старта </button>
+
+    <div id="pagination">
+
+    </div>
+
+<div id="results">
+
+</div>
+</body>
+
+
+<script src="search-product.js" ></script>
