--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <div id="loading">
             <img id="loading-image" src="loading.gif" alt="Loading..." />
-        </div><div id="number1 " class="gs_kupon" ><h2>Скидка 15% на все цветы. Не применяется на покупку тортов и десертов</h2>
+        </div>
+        <div id="kuponi"><div id="number1 " class="gs_kupon" ><h2>Скидка 15% на все цветы. Не применяется на покупку тортов и десертов</h2>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104478/logos/regular.png" /></div>
                 <div class="gs_website">tsvetomania.ru</div>
                 <div class="gs_category">Без категории</div>
@@ -19923,4 +19924,4 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/362097?erid=2SDnjcq5tL8" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АДВ-КЕЙК" ИНН 9705066208, https://eduson.academy. ЕРИР 2SDnjcq5tL8</div>
-                </div><script src="main.js"></script></body></html>
+                </div></div><script src="main.js"></script></body></html>
