--- a/poisk_tovarov/index.html
+++ b/poisk_tovarov/index.html
@@ -11,6 +11,7 @@
     <!-- end of jquery from google and mobile jquery -->
 </head>
 <body>
+    <script src="categories.js" ></script>
   <input type="checkbox" name="notid" id="notid" checked>Поиск без аксессуаров</input>
   <input type="checkbox" name="aliexpress" id="aliexpress" checked>Поиск без Aliexpressa</input>
   <input type="checkbox" name="nobooks" id="nobooks" checked>Поиск без книг</input>
