--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">5 Января 2024
+        <div id="date">6 Января 2024
         </div>
         <div id="sort">
         </div>
@@ -6802,15 +6802,15 @@
                 <div class="gs_website">netology.ru</div>
                 <div class="gs_category">Обучение, семинары и тренинги</div>
                 <div class="gs_dates">
-                <div class="gs_start">Начало: 3 Января 2024 00:00:00</div><br>
-                <div class="gs_end">Конец: 5 Января 2024 23:59:59</div>
+                <div class="gs_start">Начало: 6 Января 2024 00:00:00</div><br>
+                <div class="gs_end">Конец: 9 Января 2024 23:59:59</div>
                 </div>
                 <div class="gs_type">SALE</div>
                 <div class="gs_block">
                 <div class="gs_code">Промокод: </div>
-                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/362616?erid=2SDnjekML7A" >Получить скидку</a></div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/362617?erid=2SDnjc4gxzt" >Получить скидку</a></div>
                 </div>
-                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АДВ-КЕЙК" ИНН 9705066208, https://netology.ru/. ЕРИР 2SDnjekML7A</div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АДВ-КЕЙК" ИНН 9705066208, https://netology.ru/. ЕРИР 2SDnjc4gxzt</div>
                 </div><div id="number454 " class="gs_kupon" >
             <div class="gs_descr"><h2>Скидка -30% на подарочные наборы!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/103822/logos/regular.png" /></div>
@@ -8407,15 +8407,15 @@
                 <div class="gs_website">santehnika-tut.ru</div>
                 <div class="gs_category">Сантехника</div>
                 <div class="gs_dates">
-                <div class="gs_start">Начало: 28 Декабря 2023 00:00:00</div><br>
-                <div class="gs_end">Конец: 5 Января 2024 23:59:59</div>
+                <div class="gs_start">Начало: 6 Января 2024 00:00:00</div><br>
+                <div class="gs_end">Конец: 8 Января 2024 23:59:59</div>
                 </div>
                 <div class="gs_type">SALE</div>
                 <div class="gs_block">
-                <div class="gs_code">Промокод: ZIMA24</div>
-                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/363102?kc=ZIMA24&erid=2SDnjeVQjxk" >Получить скидку</a></div>
+                <div class="gs_code">Промокод: CHRISTMAS24</div>
+                <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/363103?kc=CHRISTMAS24&erid=2SDnjehGeDW" >Получить скидку</a></div>
                 </div>
-                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "Элит Групп" ИНН 5029152090, https://santehnika-tut.ru/. ЕРИР 2SDnjeVQjxk</div>
+                <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "Элит Групп" ИНН 5029152090, https://santehnika-tut.ru/. ЕРИР 2SDnjehGeDW</div>
                 </div><div id="number561 " class="gs_kupon" >
             <div class="gs_descr"><h2>Доставка товара со склада на следующий день!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95754/logos/regular.png" /></div>
