--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">5 Июня 2024
+        <div id="date">6 Июня 2024
         </div>
         <div id="sort">
         </div>
@@ -8210,7 +8210,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/375035?erid=2SDnjd8gKww" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель Мытищинский филиал "Твой Дом" АО "КРОКУС" ИНН 7728115183, https://tvoydom.ru/. erid 2SDnjd8gKww</div>
-                </div><div id="number483 " class="gs_kupon" >
+                </div><div id="number483 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Распродажа женской одежды!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95641/logos/regular.png" /></div>
                 <div class="gs_website">ostin.com</div>
@@ -8227,7 +8227,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/375104?erid=2SDnjcLwp4y" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО «Остин» ИНН 7728551510, https://ostin.com. erid 2SDnjcLwp4y</div>
-                </div><div id="number484 " class="gs_kupon" >
+                </div><div id="number484 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Распродажа мужской одежды!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95641/logos/regular.png" /></div>
                 <div class="gs_website">ostin.com</div>
@@ -8822,7 +8822,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/376007?erid=2SDnjemgHHj" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО «Носимо» ИНН 7701349057, https://galaxystore.ru. erid 2SDnjemgHHj</div>
-                </div><div id="number519 " class="gs_kupon" >
+                </div><div id="number519 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Распродажа женской одежды и обуви!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/103690/logos/regular.png" /></div>
                 <div class="gs_website">tvoe.ru</div>
@@ -8839,7 +8839,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/376033?erid=2SDnjeixQx9" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ТВОЕ ИНН 7706741162, https://tvoe.ru/. erid 2SDnjeixQx9</div>
-                </div><div id="number520 " class="gs_kupon" >
+                </div><div id="number520 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Распродажа мужской одежды и обуви!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/103690/logos/regular.png" /></div>
                 <div class="gs_website">tvoe.ru</div>
@@ -9213,7 +9213,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/376259?erid=2SDnjetuovR" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "МИРКЛИ" ИНН 7743250099, https://mircli.ru/. erid 2SDnjetuovR</div>
-                </div><div id="number542 " class="gs_kupon" >
+                </div><div id="number542 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Дарим раствор ReNu Advanced!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/98216/logos/regular.png" /></div>
                 <div class="gs_website">ochkarik.ru</div>
@@ -9349,7 +9349,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/376382?erid=2SDnjdr2wpD" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "МЕДИ РУС" ИНН 7731536713, https://www.medi-salon.ru. erid 2SDnjdr2wpD</div>
-                </div><div id="number550 " class="gs_kupon" >
+                </div><div id="number550 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидки до -25% на подушки HILBERD</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104092/logos/regular.png" /></div>
                 <div class="gs_website">medi-salon.ru</div>
@@ -10981,7 +10981,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/376975?kc=HALVAMTS&erid=2SDnjcizvYq" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ПУБЛИЧНОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО "МОБИЛЬНЫЕ ТЕЛЕСИСТЕМЫ" ИНН 7740000076, https://shop.mts.ru/. erid 2SDnjcizvYq</div>
-                </div><div id="number646 " class="gs_kupon" >
+                </div><div id="number646 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 500 рублей при заказе от 5500 рублей</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/71981/logos/regular.png" /></div>
                 <div class="gs_website">iledebeaute.ru</div>
@@ -12919,7 +12919,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/377249?kc=gdeslon700&erid=2SDnje3rBWZ" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ПК «Белль Ю» ИНН 6678115874, https://belleyou.ru/. erid 2SDnje3rBWZ</div>
-                </div><div id="number760 " class="gs_kupon" >
+                </div><div id="number760 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидки до -57% на эргономичные решения для дома и офиса ONKRON</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/107176/logos/regular.png" /></div>
                 <div class="gs_website">coxo.ru</div>
@@ -14534,7 +14534,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/377951?erid=2SDnjdKDPBf" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ТАБЕР ТРЕЙД ООО ИНН 7709505477, https://www.podrygka.ru/. erid 2SDnjdKDPBf</div>
-                </div><div id="number855 " class="gs_kupon" >
+                </div><div id="number855 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>1+1=3 KHARISMA VOLTAGE+ KENSUKO</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/111899/logos/regular.jpg" /></div>
                 <div class="gs_website">podrygka.ru</div>
