--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="header-top">Поиск скидок в России</div>
             <div class="header"></div>
-        <div id="date">26 Июля 2024
+        <div id="date">27 Июля 2024
         </div>
         <div id="sort">
         </div>
@@ -13786,7 +13786,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380408?erid=2SDnjeQWBxE" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО ГикБреинс ИНН 7726381870, https://gb.ru/. erid 2SDnjeQWBxE</div>
-                </div><div id="number811 " class="gs_kupon" >
+                </div><div id="number811 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Модуль по soft skills в подарок!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102093/logos/regular.png" /></div>
                 <div class="gs_website">contented.ru</div>
@@ -13803,7 +13803,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380410?erid=2SDnjbrFmFg" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Скилфэктори ИНН 9702009530, https://contented.ru/. erid 2SDnjbrFmFg</div>
-                </div><div id="number812 " class="gs_kupon" >
+                </div><div id="number812 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Дополнительная скидка 5 000 рублей на любой курс и тариф</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102093/logos/regular.png" /></div>
                 <div class="gs_website">contented.ru</div>
@@ -13820,7 +13820,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/380411?erid=2SDnjbxBiP4" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО Скилфэктори ИНН 9702009530, https://contented.ru/. erid 2SDnjbxBiP4</div>
-                </div><div id="number813 " class="gs_kupon" >
+                </div><div id="number813 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидки до -45% на все курсы</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/102093/logos/regular.png" /></div>
                 <div class="gs_website">contented.ru</div>
@@ -17424,7 +17424,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/381102?kc=TRAIL_GDESLON_27&erid=2SDnjcgFxHg" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель АО "МЮЗ" ИНН 7724181241, https://miuz.ru/. erid 2SDnjcgFxHg</div>
-                </div><div id="number1025 " class="gs_kupon" >
+                </div><div id="number1025 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Распродажа бренда Cubot</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/101124/logos/regular.png" /></div>
                 <div class="gs_website">AliExpress RU&CIS</div>
@@ -17441,7 +17441,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/381114?erid=2SDnjd616iv" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АЛИБАБА.КОМ (РУ)" ИНН 7703380158, https://aliexpress.ru/. erid 2SDnjd616iv</div>
-                </div><div id="number1026 " class="gs_kupon" >
+                </div><div id="number1026 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>CUBOT KINGKONG X со скидкой!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/101124/logos/regular.png" /></div>
                 <div class="gs_website">AliExpress RU&CIS</div>
@@ -17458,7 +17458,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/381115?erid=2SDnjdViuES" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АЛИБАБА.КОМ (РУ)" ИНН 7703380158, https://aliexpress.ru/. erid 2SDnjdViuES</div>
-                </div><div id="number1027 " class="gs_kupon" >
+                </div><div id="number1027 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>CUBOT MAX 5 со скидкой!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/101124/logos/regular.png" /></div>
                 <div class="gs_website">AliExpress RU&CIS</div>
@@ -17475,7 +17475,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/381116?erid=2SDnje5pciN" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "АЛИБАБА.КОМ (РУ)" ИНН 7703380158, https://aliexpress.ru/. erid 2SDnje5pciN</div>
-                </div><div id="number1028 " class="gs_kupon" >
+                </div><div id="number1028 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>CUBOT ACE 3 со скидкой!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/101124/logos/regular.png" /></div>
                 <div class="gs_website">AliExpress RU&CIS</div>
@@ -23901,7 +23901,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382102?kc=GILETTE20&erid=2SDnjcr4dM4" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ЯНДЕКС" ИНН 7736207543, https://market.yandex.ru/. erid 2SDnjcr4dM4</div>
-                </div><div id="number1406 " class="gs_kupon" >
+                </div><div id="number1406 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 5% на бытовую технику и электронику от Технопарка</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95624/logos/regular.png" /></div>
                 <div class="gs_website">market.yandex.ru</div>
@@ -23918,7 +23918,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382104?kc=TECHNO5&erid=2SDnjcbFkyQ" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ЯНДЕКС" ИНН 7736207543, https://market.yandex.ru/. erid 2SDnjcbFkyQ</div>
-                </div><div id="number1407 " class="gs_kupon" >
+                </div><div id="number1407 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 7% на бытовую технику и электронику от Технопарка</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95624/logos/regular.png" /></div>
                 <div class="gs_website">market.yandex.ru</div>
@@ -23935,7 +23935,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382105?kc=TECHNO7&erid=2SDnjcpbeWW" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ЯНДЕКС" ИНН 7736207543, https://market.yandex.ru/. erid 2SDnjcpbeWW</div>
-                </div><div id="number1408 " class="gs_kupon" >
+                </div><div id="number1408 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 10% на бытовую технику и электронику от Технопарка</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95624/logos/regular.png" /></div>
                 <div class="gs_website">market.yandex.ru</div>
@@ -23952,7 +23952,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/382106?kc=TECHNO10&erid=2SDnjd8PVte" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "ЯНДЕКС" ИНН 7736207543, https://market.yandex.ru/. erid 2SDnjd8PVte</div>
-                </div><div id="number1409 " class="gs_kupon" >
+                </div><div id="number1409 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка 10% на бытовую технику и электронику от Технопарка</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/95624/logos/regular.png" /></div>
                 <div class="gs_website">market.yandex.ru</div>
@@ -32673,7 +32673,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383189?erid=2SDnjeoAZTx" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.chitai-gorod.ru/. erid 2SDnjeoAZTx</div>
-                </div><div id="number1922 " class="gs_kupon" >
+                </div><div id="number1922 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидка -20% на подборку книг издательства «Эксмо»</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/80969/logos/regular.png" /></div>
                 <div class="gs_website">chitai-gorod.ru</div>
@@ -32690,7 +32690,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383190?erid=2SDnjc8zBe2" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "НОВЫЙ КНИЖНЫЙ ЦЕНТР" ИНН 7710422909, https://www.chitai-gorod.ru/. erid 2SDnjc8zBe2</div>
-                </div><div id="number1923 " class="gs_kupon" >
+                </div><div id="number1923 " class="gs_kupon ended" >
             <div class="gs_descr"><h2>Скидки до 26% на подборку комиксов, романов и сборников стихов</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/80969/logos/regular.png" /></div>
                 <div class="gs_website">chitai-gorod.ru</div>
@@ -34526,7 +34526,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383350?erid=2SDnjefKmaA" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО АНМАР ИНН 7707455340, https://www.stolplit.ru/. erid 2SDnjefKmaA</div>
-                </div><div id="number2031 " class="gs_kupon future" >
+                </div><div id="number2031 " class="gs_kupon" >
             <div class="gs_descr"><h2>Море скидок в интернет-магазине «Бубль-Гум»!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104911/logos/regular.png" /></div>
                 <div class="gs_website">boobl-goom.ru</div>
@@ -34543,7 +34543,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383351?erid=2SDnjcpv9DL" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "РЦ КНЕВИЧИ" ИНН 2543082634, https://boobl-goom.ru/. erid 2SDnjcpv9DL</div>
-                </div><div id="number2032 " class="gs_kupon future" >
+                </div><div id="number2032 " class="gs_kupon" >
             <div class="gs_descr"><h2>Скидки до 20% на школьные дневники</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104911/logos/regular.png" /></div>
                 <div class="gs_website">boobl-goom.ru</div>
@@ -34560,7 +34560,7 @@
                 <div class="gs_link"><a target="_blank" href="https://xf.gdeslon.ru/ck/09561f1ac45fb4b1bb8db333c498181b2561be99/383352?erid=2SDnjdPXsQv" >Получить скидку</a></div>
                 </div>
                 <div class="podpis"  style="font-size:5px">Реклама. Рекламодатель ООО "РЦ КНЕВИЧИ" ИНН 2543082634, https://boobl-goom.ru/. erid 2SDnjdPXsQv</div>
-                </div><div id="number2033 " class="gs_kupon future" >
+                </div><div id="number2033 " class="gs_kupon" >
             <div class="gs_descr"><h2>Скидка 1000 рублей на онлайн-заказ от 5000 рублей!</h2></div>
                 <div class="gs_logo"><img lazyload="true" id="gs_image_logo" src="https://gdeslon.ru/uploads/users/104911/logos/regular.png" /></div>
                 <div class="gs_website">boobl-goom.ru</div>
